--- a/index.html
+++ b/index.html
@@ -727,8 +727,50 @@
     </div>
     <br /><br /><br /><br /><br /><br />
   </section>
+  <!--end of archibus / other / cad section ---------------------------------------------------------------------------->
+    <!--Start of certifications section ---------------------------------------------------------------------------->
+    <section class="wrapper">
+      <h1 id="certifications" class="myGalleries">My Certifications</h1>
+      <div class="img-area">
+        <!--W3Schools-->
+        <div class="single-img cards project-cards border-aqua">
+          <img alt="W3Schools JavaScript Fundamentals" class="project-image img-thumbnail single-img"
+              src="img/certs/w3schools.PNG" style="height:150px; width: 260px;">
+          <a href="img/certs/w3schools.PNG" target="_blank">
+            <p class="card-btn">
+              <span class="btn btn-success btn-sm zoom">View</span>
+            </p>
+          </a>
+          <p class="color-black">W3Schools JavaScript Fundamentals</p>
+        </div>
+        <!--freeCodeCamp JavaScript-->
+        <div class="single-img cards project-cards border-aqua">
+          <img alt="freeCodeCamp JavaScript Algorithms and Data Structures" class="project-image img-thumbnail  single-img"
+              src="img/certs/fCCJavaScript.PNG" style="height:150px; width: 260px;">
+          <a href="img/certs/fCCJavaScript.PNG" target="_blank">
+            <p class="card-btn">
+              <span class="btn btn-success btn-sm zoom">View</span>
+            </p>
+          </a>
+          <p class="color-black">freeCodeCamp JavaScript Algorithms and Data Structures</p>
+        </div>
+        <!--freeCodeCamp Responsive Web Design-->
+        <div class="single-img cards project-cards border-aqua">
+          <img alt="freeCodeCamp Responsive Web Design" class="project-image img-thumbnail single-img" 
+              src="img/certs/fCCResponsiveWebDesign.PNG" style="height:150px; width: 260px;">
+          <a href="img/certs/fCCResponsiveWebDesign.PNG" target="_blank">
+            <p class="card-btn">
+              <span class="btn btn-success btn-sm zoom">View</span>
+            </p>
+          </a>
+          <p class="color-black">freeCodeCamp Responsive Web Design</p>
+        </div>
+      </div>
+      <br /><br /><br /><br /><br /><br />
+    </section>
+    <!--end of certifications section ---------------------------------------------------------------------------->
+  <!--start of about section ---------------------------------------------------------------------------->
   <section id="about">
-    <!--About start-->
     <div class="wrapper">
       <h1 class="myGalleries">About Me</h1>
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
