--- a/backups/4_4_2021/index.html
+++ b/backups/4_4_2021/index.html
@@ -30,6 +30,7 @@
         <a href="#personal-projects" style="text-decoration: none;">My Projects</a>
         <a href="#projects" style="text-decoration: none;">Web&nbsp;Development</a>
         <a href="#autocad" style="text-decoration: none;">Archibus&nbsp;|&nbsp;CAD&nbsp;|&nbsp;Other</a>
+        <a href="#certifications" style="text-decoration: none;">Certifications</a>
         <a href="#about" style="text-decoration: none;">About Me</a>
       </nav>
     </nav>
