--- a/backups/4_4_2021/index.html
+++ b/backups/4_4_2021/index.html
@@ -91,7 +91,7 @@
     <h1 id="certifications" class="myGalleries">My Certifications</h1>
     <div class="img-area">
       <!--W3Schools-->
-      <div class="single-img cards project-cards border-aqua">
+      <div class="single-img cards project-cards border-cert">
         <img alt="W3Schools JavaScript Fundamentals" class="project-image img-thumbnail single-img"
           src="img/certs/w3schools.PNG" style="height:150px; width: 260px;">
         <a href="img/certs/w3schools.PNG" target="_blank">
@@ -102,7 +102,7 @@
         <p class="color-black">W3Schools JavaScript Fundamentals</p>
       </div>
       <!--freeCodeCamp JavaScript-->
-      <div class="single-img cards project-cards border-aqua">
+      <div class="single-img cards project-cards border-cert">
         <img alt="freeCodeCamp JavaScript Algorithms and Data Structures" class="project-image img-thumbnail  single-img"
           src="img/certs/fCCJavaScript.PNG" style="height:150px; width: 260px;">
         <a href="img/certs/fCCJavaScript.PNG" target="_blank">
@@ -113,7 +113,7 @@
         <p class="color-black">freeCodeCamp JavaScript Algorithms and Data Structures</p>
       </div>
       <!--freeCodeCamp Responsive Web Design-->
-      <div class="single-img cards project-cards border-aqua">
+      <div class="single-img cards project-cards border-cert">
         <img alt="freeCodeCamp Responsive Web Design" class="project-image img-thumbnail single-img"
           src="img/certs/fCCResponsiveWebDesign.PNG" style="height:150px; width: 260px;">
         <a href="img/certs/fCCResponsiveWebDesign.PNG" target="_blank">
