--- a/index - Copy.html
+++ b/index - Copy.html
@@ -90,6 +90,17 @@
   <section class="wrapper">
     <h1 id="certifications" class="myGalleries">My Certifications</h1>
     <div class="img-area">
+      <!--MTA Microsoft DB Fundamentals-->
+      <div class="single-img cards project-cards border-cert">
+        <img alt="MTA Microsoft DB Fundamentals" class="project-image img-thumbnail single-img"
+          src="img/certs/MTADB.PNG" style="height:150px; width: 260px;">
+        <a href="img/certs/MTADB.PNG" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">Microsoft MTA: Database Fundamentals</p>
+      </div>
       <!--W3Schools-->
       <div class="single-img cards project-cards border-cert">
         <img alt="W3Schools JavaScript Fundamentals" class="project-image img-thumbnail single-img"
