--- a/index - Copy.html
+++ b/index - Copy.html
@@ -91,9 +91,9 @@
     <h1 id="certifications" class="myGalleries">My Certifications</h1>
     <div class="img-area">
       <!--MTA Microsoft DB Fundamentals-->
-      <div class="single-img cards project-cards border-cert">
+      <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
         <img alt="MTA Microsoft DB Fundamentals" class="project-image img-thumbnail single-img"
-          src="img/certs/MTADB.PNG" style="height:150px; width: 260px;">
+          src="img/certs/mta-database-fundamentals-certified-2021.png" style="height:150px; width: 150px; margin-right: 50px; margin-left: 50px;"><!--250px wide 160height-->
         <a href="img/certs/MTADB.PNG" target="_blank">
           <p class="card-btn">
             <span class="btn btn-success btn-sm zoom">View</span>
