--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
         <h4 class="opacity-7">
           <p class="typewrite" style="text-decoration: none;" data-period="2000"
-            data-type='[ "Data Analysis & QA Testing | IWMS Administration | Web Development" ]'></p>
+            data-type='[ "Salesforce QA Specialist | IWMS Administrator | Web Developer | Data Analyst" ]'></p>
           <span class="wrap"></span>
         </h4>
       <div>
