--- a/index - Copy.html
+++ b/index - Copy.html
@@ -112,8 +112,9 @@
         </a>
         <p class="color-black">W3Schools JavaScript Fundamentals</p>
       </div>
+    <!-- Don't think I need 2 Javascript certs, w3schools version is more impressive so I'll leave it showing.-->
       <!--freeCodeCamp JavaScript-->
-      <div class="single-img cards project-cards border-cert">
+      <!-- <div class="single-img cards project-cards border-cert">
         <img alt="freeCodeCamp JavaScript Algorithms and Data Structures" class="project-image img-thumbnail  single-img"
           src="img/certs/fCCJavaScript.PNG" style="height:150px; width: 260px;">
         <a href="img/certs/fCCJavaScript.PNG" target="_blank">
@@ -122,7 +123,7 @@
           </p>
         </a>
         <p class="color-black">freeCodeCamp JavaScript Algorithms and Data Structures</p>
-      </div>
+      </div> -->
       <!--freeCodeCamp Responsive Web Design-->
       <div class="single-img cards project-cards border-cert">
         <img alt="freeCodeCamp Responsive Web Design" class="project-image img-thumbnail single-img"
