--- a/index.html
+++ b/index.html
@@ -792,27 +792,10 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        I'm an IWMS Administrator and Analyst with over 5 years of experience working with highly collaborative teams using a
-        diverse set of computer software & languages, including: T-SQL Queries & MS SQL Server 2008-2016, HTML5, CSS3,
+        I'm an Data Analyst with over 6 years of experience working with highly collaborative teams using a
+        diverse set of computer software & languages, including: Treasure Data, Salesforce, SQL Queries & MS SQL Server 2008-2016, HTML5, CSS3,
         JavaScript, Bootstrap, Archibus IWMS, AutoCAD, Crystal Reports, MS Excel, VLOOKUPs, Pivot Tables, Charts & Dashboards,
         MS Word, MS PowerPoint, and Jira.
-      </h4>
-    </div>
-    <br />
-    <div class="wrapper">
-      <i class="fa fa-graduation-cap fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
-      <h4 class="text-area about-h4">
-        For the last 2 years I have worn many hats while working for Robert Stephen Consulting.
-        Hired as an IWMS Administrator, I quickly transitioned to a CAD Technician / Specialist position within 3 - 6
-        months.
-      </h4>
-    </div>
-    <br />
-    <div class="wrapper">
-      <i class="fa fa-code fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
-      <h4 class="text-area about-h4">
-        Around 1 year on the job I was asked to learn the AdminLTE Bootstrap frontend framework to help develop custom responsive Bootstrap web pages with HTML,
-        CSS and JavaScript, and have really fallen in love with web design and development ever since.
       </h4>
     </div>
     <br />
@@ -825,15 +808,6 @@
       </h4>
     </div>
     <br />
-    <!-- <div class="wrapper">
-      <i class="fa fa-rocket fa-lg iAbout"></i>&nbsp;
-      <h4 class="text-area about-h4">
-        Recently I've earned the Responsive Web Design Developer Certification & JavaScript
-        Algorithms and Data Structures Developer Certification from freeCodeCamp.
-        Currently I am working my way through their Front End Libraries Certification, which includes Bootstrap, jQuery,
-        Sass, React and Redux. I'm also in the middle of reading Eloquent JavaScript by Marijn Haverbeke.
-      </h4>
-    </div> -->
     <!-- end about section-->
   </section>
   <br /><br /><br /><br /><br /><br />
