--- a/index.html
+++ b/index.html
@@ -792,8 +792,8 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        I'm an Data Analyst with over 6 years of experience working with highly collaborative teams using a
-        diverse set of computer software & languages, including: Treasure Data, Salesforce, SQL Queries & MS SQL Server 2008-2016, HTML5, CSS3,
+        I'm a Marketing QA Analyst with over 7 years of experience working with highly collaborative teams using a
+        diverse set of computer software & languages, including: Salesforce Marketing Cloud, SQL Queries & MS SQL Server 2008-2016, HTML5, CSS3,
         JavaScript, Bootstrap, Archibus IWMS, AutoCAD, Crystal Reports, MS Excel, VLOOKUPs, Pivot Tables, Charts & Dashboards,
         MS Word, MS PowerPoint, and Jira.
       </h4>
