Update index - copy.html

--- a/index - copy.html
+++ b/index - copy.html
@@ -47,7 +47,7 @@
         <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
         <h4 class="opacity-7">
           <p class="typewrite" style="text-decoration: none;" data-period="2000"
-            data-type='[ "Marketing QA Analyst | Admin | Front End Developer" ]'></p>
+            data-type='[ "Marketing QA Analyst | Front End Developer" ]'></p>
           <span class="wrap"></span>
         </h4>
       <div>
@@ -792,7 +792,7 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        I'm a Marketing QA Analyst with over 7 years of experience working with highly collaborative teams using a
+        I'm a Marketing QA Analyst with over 8 years of experience working with highly collaborative teams using a
         diverse set of computer software & languages, including: Salesforce Marketing Cloud, SQL Queries & MS SQL Server 2008-2016, HTML5, CSS3,
         JavaScript, Bootstrap, Archibus IWMS, AutoCAD, Crystal Reports, MS Excel, VLOOKUPs, Pivot Tables, Charts & Dashboards,
         MS Word, MS PowerPoint, and Jira.
