--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
   <br />
   </section>
   <br /><br /><br /><br /><br /><br />
+  
+  <!--start of about section ---------------------------------------------------------------------------->
+  <section id="about">
+    <div class="wrapper">
+      <h1 class="myGalleries">About Me</h1>
+      <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
+      <!--     https://fontawesome.com/v4.7.0/icons/       -->
+      <h4 class="text-area about-h4">
+        I'm a Marketing QA Analyst III with over 8 years of experience working with highly collaborative teams using a diverse set of software & languages, including: Salesforce Marketing Cloud, AMPscript, SQL Queries & MS SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, Lucidchart, Archibus IWMS, AutoCAD, MS Excel, Word and PowerPoint.
+      </h4>
+    </div>
+    <br />
+    <div class="wrapper">
+      <i class="fa fa-leanpub fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
+      <h4 class="text-area about-h4">
+        I love learning and I love teaching. I want to discover something new and interesting every day, and constantly be
+        improving myself in some way. I want to become a subject matter expert in whatever I’m doing, and be able to effectively
+        and efficiently teach it to others through workflow documentation, training videos, demos etc.
+      </h4>
+    </div>
+    <br />
+  </section>
+  <!-- end about section-->
+  
   <!--Start of certifications section ---------------------------------------------------------------------------->
   <section class="wrapper">
     <h1 id="certifications" class="myGalleries">My Certifications</h1>
@@ -785,31 +809,7 @@
     <br /><br /><br /><br /><br /><br />
   </section>
   <!--end of archibus / other / cad section ---------------------------------------------------------------------------->
-  <!--start of about section ---------------------------------------------------------------------------->
-  <section id="about">
-    <div class="wrapper">
-      <h1 class="myGalleries">About Me</h1>
-      <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
-      <!--     https://fontawesome.com/v4.7.0/icons/       -->
-      <h4 class="text-area about-h4">
-        I'm a Marketing QA Analyst with over 8 years of experience working with highly collaborative teams using a
-        diverse set of computer software & languages, including: Salesforce Marketing Cloud, SQL Queries & MS SQL Server 2008-2016, HTML5, CSS3,
-        JavaScript, Bootstrap, Archibus IWMS, AutoCAD, Crystal Reports, MS Excel, VLOOKUPs, Pivot Tables, Charts & Dashboards,
-        MS Word, MS PowerPoint, and Jira.
-      </h4>
-    </div>
-    <br />
-    <div class="wrapper">
-      <i class="fa fa-leanpub fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
-      <h4 class="text-area about-h4">
-        I love learning and I love teaching. I want to discover something new and interesting every day, and constantly be
-        improving myself in some way. I want to become a subject matter expert in whatever I’m doing, and be able to effectively
-        and efficiently teach it to others through workflow documentation, training videos, demos etc.
-      </h4>
-    </div>
-    <br />
-    <!-- end about section-->
-  </section>
+
   <br /><br /><br /><br /><br /><br />
   <footer class="text-center" style="width: 100%;">
     <p>
