Update index - copy.html

--- a/index - copy.html
+++ b/index - copy.html
@@ -47,7 +47,7 @@
         <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
         <h4 class="opacity-7">
           <p class="typewrite" style="text-decoration: none;" data-period="2000"
-            data-type='[ "Marketing QA Analyst | Front End Developer" ]'></p>
+            data-type='[ "Marketing QA Analyst III" ]'></p>
           <span class="wrap"></span>
         </h4>
       <div>
