Update index - copy.html

--- a/index - copy.html
+++ b/index - copy.html
@@ -27,11 +27,11 @@
       </button>
       <nav class="dropdown-content" style="font-family: Verdana, Geneva, Tahoma, sans-serif; border-radius: 5px;">
         <a href="#welcome-section" style="text-decoration: none;">Contact Info</a>
+        <a href="#about" style="text-decoration: none;">About Me</a>
         <a href="#certifications" style="text-decoration: none;">Certifications</a>
         <a href="#personal-projects" style="text-decoration: none;">My Projects</a>
         <a href="#projects" style="text-decoration: none;">Web&nbsp;Development</a>
         <a href="#autocad" style="text-decoration: none;">Other</a>
-        <a href="#about" style="text-decoration: none;">About Me</a>
       </nav>
     </nav>
     <!--/. end Navbar-->
@@ -47,7 +47,7 @@
         <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
         <h4 class="opacity-7">
           <p class="typewrite" style="text-decoration: none;" data-period="2000"
-            data-type='[ "Marketing QA Analyst III" ]'></p>
+            data-type='[ "Marketing QA Analyst III @ Robert Half" ]'></p>
           <span class="wrap"></span>
         </h4>
       <div>
@@ -85,7 +85,31 @@
     </div>
   <br />
   </section>
-  <br /><br /><br /><br /><br /><br />
+  <br /><br /><br /><br />
+  
+  <!--start of about section ---------------------------------------------------------------------------->
+  <section id="about">
+    <div class="wrapper">
+      <h1 class="myGalleries">About Me</h1>
+      <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
+      <!--     https://fontawesome.com/v4.7.0/icons/       -->
+      <h4 class="text-area about-h4">
+        I am a seasoned Marketing QA Analyst III with over 8 years of experience collaborating with dynamic and diverse teams. My expertise spans across a wide array of software and programming languages, including: 
+        Salesforce Marketing Cloud, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, Lucidchart, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.   
+      </h4>
+    </div>
+    <br />
+    <div class="wrapper">
+      <i class="fa fa-leanpub fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
+      <h4 class="text-area about-h4">
+        Fueling my passion for continuous growth, I thrive on learning and sharing my knowledge with others. Each day I embrace the opportunity to uncover new and intriguing insights, always striving to better myself. 
+        My aspiration is to become a subject matter expertthat can adeptly impart that expertise to others through comprehensive workflow documentation and engaging training videos.
+      </h4>
+    </div>
+    <br />
+  </section>
+  <!-- end about section-->
+  
   <!--Start of certifications section ---------------------------------------------------------------------------->
   <section class="wrapper">
     <h1 id="certifications" class="myGalleries">My Certifications</h1>
@@ -785,31 +809,7 @@
     <br /><br /><br /><br /><br /><br />
   </section>
   <!--end of archibus / other / cad section ---------------------------------------------------------------------------->
-  <!--start of about section ---------------------------------------------------------------------------->
-  <section id="about">
-    <div class="wrapper">
-      <h1 class="myGalleries">About Me</h1>
-      <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
-      <!--     https://fontawesome.com/v4.7.0/icons/       -->
-      <h4 class="text-area about-h4">
-        I'm a Marketing QA Analyst with over 8 years of experience working with highly collaborative teams using a
-        diverse set of computer software & languages, including: Salesforce Marketing Cloud, SQL Queries & MS SQL Server 2008-2016, HTML5, CSS3,
-        JavaScript, Bootstrap, Archibus IWMS, AutoCAD, Crystal Reports, MS Excel, VLOOKUPs, Pivot Tables, Charts & Dashboards,
-        MS Word, MS PowerPoint, and Jira.
-      </h4>
-    </div>
-    <br />
-    <div class="wrapper">
-      <i class="fa fa-leanpub fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
-      <h4 class="text-area about-h4">
-        I love learning and I love teaching. I want to discover something new and interesting every day, and constantly be
-        improving myself in some way. I want to become a subject matter expert in whatever I’m doing, and be able to effectively
-        and efficiently teach it to others through workflow documentation, training videos, demos etc.
-      </h4>
-    </div>
-    <br />
-    <!-- end about section-->
-  </section>
+
   <br /><br /><br /><br /><br /><br />
   <footer class="text-center" style="width: 100%;">
     <p>
