--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <i class="fa fa-leanpub fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
       <h4 class="text-area about-h4">
         Fueling my passion for continuous growth, I thrive on learning and sharing my knowledge with others. Each day I embrace the opportunity to uncover new and intriguing insights, always striving to better myself. 
-        My aspiration is to become a subject matter expertthat can adeptly impart that expertise to others through comprehensive workflow documentation and engaging training videos.
+        My aspiration is to become a subject matter expert that can impart that expertise to others through comprehensive workflow documentation and engaging training videos.
       </h4>
     </div>
     <br />
