--- a/index.html
+++ b/index.html
@@ -98,16 +98,14 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        I am a seasoned Marketing QA Analyst III with over 8 years of experience collaborating with dynamic and diverse teams. My expertise spans across a wide array of software and programming languages, including: 
-        Salesforce Marketing Cloud, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, Lucidchart, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.   
+        As a Marketing QA Analyst I have more than 8 years of experience thriving in dynamic and collaborative team environments. My expertise spans across a wide array of software and programming languages, including but not limited to: Salesforce Marketing Cloud, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, Lucidchart, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
       </h4>
     </div>
     <br />
     <div class="wrapper">
       <i class="fa fa-leanpub fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
       <h4 class="text-area about-h4">
-        Fueling my passion for continuous growth, I thrive on learning and sharing my knowledge with others. Each day I embrace the opportunity to uncover new and intriguing insights, always striving to better myself. 
-        My aspiration is to become a subject matter expert that can impart that expertise to others through comprehensive workflow documentation and engaging training videos.
+        Fueling my passion for continuous growth, I thrive on learning and sharing my knowledge with others. Each day I embrace the opportunity to uncover new and intriguing insights, always striving to better myself. My aspiration is to become a subject matter expert that can impart that expertise to others through comprehensive workflow documentation and engaging training videos.   
       </h4>
     </div>
     <br />
