--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
   <section class="wrapper">
     <h1 id="certifications" class="myGalleries">My Certifications</h1>
     <div class="img-area">
+      <!--Salesforce Certified Marketing Associate-->
+      <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
+        <img alt="Salesforce Certified Marketing Associate" class="project-image img-thumbnail single-img"
+          src="img/certs/marketingAssociate.png" style="height:150px; width: 150px; margin-right: 50px; margin-left: 50px;"><!--250px wide 160height-->
+        <a href="img/certs/marketingAssociate.png" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">Salesforce Certified Marketing Associate</p>
+      </div>
       <!--MTA Microsoft DB Fundamentals-->
       <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
         <img alt="MTA Microsoft DB Fundamentals" class="project-image img-thumbnail single-img"
