--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        As a Marketing QA Analyst I have more than 8 years of experience thriving in dynamic and collaborative team environments. My expertise spans across a wide array of software and programming languages, including but not limited to: Salesforce Marketing Cloud, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, Lucidchart, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
+        Salesforce Certified Professional who's work experience encompasses a diverse range of software and programming languages, including, but not limited to: Salesforce Marketing Cloud, Journey QA, Automation QA, Email QA, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
       </h4>
     </div>
     <br />
