--- a/index.html
+++ b/index.html
@@ -102,19 +102,20 @@
       </h4>
     </div>
     <br />
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <i class="fa fa-leanpub fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
       <h4 class="text-area about-h4">
         Fueling my passion for continuous growth, I thrive on learning and sharing my knowledge with others. Each day I embrace the opportunity to uncover new and intriguing insights, always striving to better myself. My aspiration is to become a subject matter expert that can impart that expertise to others through comprehensive workflow documentation and engaging training videos.   
       </h4>
     </div>
+    -->
     <br />
   </section>
   <!-- end about section-->
   
   <!--Start of certifications section ---------------------------------------------------------------------------->
   <section class="wrapper">
-    <h1 id="certifications" class="myGalleries">My Certifications</h1>
+    <h1 id="certifications" class="myGalleries">Certifications</h1>
     <div class="img-area">
       <!--Salesforce Certified Marketing Associate-->
       <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
