--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <i class="fa fa-caret-square-o-down fa-3x opacity-6" aria-hidden="true" data-toggle="tooltip"></i>
       </button>
       <nav class="dropdown-content" style="font-family: Verdana, Geneva, Tahoma, sans-serif; border-radius: 5px;">
-        <a href="#welcome-section" style="text-decoration: none;">Contact Info</a>
+        <!--<a href="#welcome-section" style="text-decoration: none;">Contact Info</a>-->
         <a href="#about" style="text-decoration: none;">About Me</a>
         <a href="#certifications" style="text-decoration: none;">Certifications</a>
         <a href="#personal-projects" style="text-decoration: none;">My Projects</a>
