--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <p class="color-black">freeCodeCamp JavaScript Algorithms and Data Structures</p>
       </div> -->
       <!--freeCodeCamp Responsive Web Design-->
-      <div class="single-img cards project-cards border-cert">
+     <!-- <div class="single-img cards project-cards border-cert">
         <img alt="freeCodeCamp Responsive Web Design" class="project-image img-thumbnail single-img"
           src="img/certs/fCCResponsiveWebDesign.PNG" style="height:150px; width: 260px;">
         <a href="img/certs/fCCResponsiveWebDesign.PNG" target="_blank">
@@ -146,7 +146,7 @@
           </p>
         </a>
         <p class="color-black">freeCodeCamp Responsive Web Design</p>
-      </div>
+      </div> -->
     </div>
     <br /><br /><br /><br /><br /><br />
   </section>
