Update index - copy.html

--- a/index - copy.html
+++ b/index - copy.html
@@ -61,7 +61,7 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        Salesforce Certified Professional who's work experience encompasses a diverse range of software and programming languages, including, but not limited to: Salesforce Marketing Cloud, Journey QA, Automation QA, Email QA, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
+        Salesforce Certified Professional with work experience that encompasses a diverse range of software and programming languages, such as: Salesforce Marketing Cloud, Journey QA, Automation QA, Email QA, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
       </h4>
     </div>
     <br />
@@ -80,6 +80,17 @@
   <section class="wrapper">
     <h1 id="certifications" class="myGalleries">Certifications</h1>
     <div class="img-area">
+      <!--Salesforce Certified AI Associate-->
+      <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
+        <img alt="Salesforce Certified Marketing Associate" class="project-image img-thumbnail single-img"
+          src="img/certs/AIAssociate.png" style="height:150px; width: 250px;"><!--250px wide 160height-->
+        <a href="img/certs/marketingAssociate.png" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">Salesforce Certified AI Associate</p>
+      </div>
       <!--Salesforce Certified Marketing Associate-->
       <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
         <img alt="Salesforce Certified Marketing Associate" class="project-image img-thumbnail single-img"
@@ -126,7 +137,7 @@
         <p class="color-black">freeCodeCamp JavaScript Algorithms and Data Structures</p>
       </div> -->
       <!--freeCodeCamp Responsive Web Design-->
-      <div class="single-img cards project-cards border-cert">
+     <!-- <div class="single-img cards project-cards border-cert">
         <img alt="freeCodeCamp Responsive Web Design" class="project-image img-thumbnail single-img"
           src="img/certs/fCCResponsiveWebDesign.PNG" style="height:150px; width: 260px;">
         <a href="img/certs/fCCResponsiveWebDesign.PNG" target="_blank">
@@ -135,7 +146,7 @@
           </p>
         </a>
         <p class="color-black">freeCodeCamp Responsive Web Design</p>
-      </div>
+      </div> -->
     </div>
     <br /><br /><br /><br /><br /><br />
   </section>
