--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
   <section class="wrapper">
     <h1 id="certifications" class="myGalleries">Certifications</h1>
     <div class="img-area">
+      <!--ISTQB Certified Tester-->
+      <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
+        <img alt="Salesforce Certified Marketing Associate" class="project-image img-thumbnail single-img"
+          src="img/certs/ISTQB Cert.png" style="height:150px; width: 250px;"><!--250px wide 160height-->
+        <a href="img/certs/ISTQB Cert.png" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">ISTQB Certified Tester</p>
+      </div>
       <!--Salesforce Certified AI Associate-->
       <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
         <img alt="Salesforce Certified Marketing Associate" class="project-image img-thumbnail single-img"
