--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        ISTQB Certified Tester and a 2x Salesforce Certified Professional with over a decade of work experience that encompasses a diverse range of software and programming languages, such as: Salesforce Marketing Cloud, Journey QA, Automation QA, Email QA, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
+        ISTQB Certified Tester and 2x Salesforce Certified Professional with over a decade of work experience that encompasses a diverse range of software and programming languages, such as: Salesforce Marketing Cloud, Journey QA, Automation QA, Email QA, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
       </h4>
     </div>
     <br />
