--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--<a href="#welcome-section" style="text-decoration: none;">Contact Info</a>-->
         <a href="#about" style="text-decoration: none;">About Me</a>
         <a href="#certifications" style="text-decoration: none;">Certifications</a>
-        <a href="#personal-projects" style="text-decoration: none;">My Projects</a>
+        <a href="#personal-projects" style="text-decoration: none;">Personal Projects</a>
         <a href="#projects" style="text-decoration: none;">Web&nbsp;Development</a>
         <a href="#autocad" style="text-decoration: none;">Other</a>
       </nav>
@@ -164,7 +164,7 @@
   <!--end of certifications section ---------------------------------------------------------------------------->
   <!--Start of Projects card section ----------------------------------------------------------------------------------------->
   <section class="center">
-    <h1 id="personal-projects" class="center myGalleries">My Projects</h1>
+    <h1 id="personal-projects" class="center myGalleries">Personal Projects</h1>
     <div class="img-area">
       <!--Power BI 1-->
       <div class="single-img cards project-cards">
