--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <nav class="dropdown-content" style="font-family: Verdana, Geneva, Tahoma, sans-serif; border-radius: 5px;">
         <!--<a href="#welcome-section" style="text-decoration: none;">Contact Info</a>-->
         <a href="#about" style="text-decoration: none;">About Me</a>
-        <a href="#certifications" style="text-decoration: none;">Certifications</a>
+        <a href="#certifications" style="text-decoration: none;">My Certifications</a>
         <a href="#personal-projects" style="text-decoration: none;">Personal Projects</a>
-        <a href="#projects" style="text-decoration: none;">Web&nbsp;Development</a>
-        <a href="#autocad" style="text-decoration: none;">Other</a>
+        <a href="#projects" style="text-decoration: none;">Web&nbsp;Dev</a>
+        <a href="#autocad" style="text-decoration: none;">Other Work</a>
       </nav>
     </nav>
     <!--/. end Navbar-->
