--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
           style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
         </a>
         
-        <!-- <a class="btn contactIcon iconHover" href="https://www.freecodecamp.org/masterchief1021" target="_blank">
+         <a class="btn contactIcon iconHover" href="https://www.freecodecamp.org/masterchief1021" target="_blank">
           <i class="fa fa-free-code-camp" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="freeCodeCamp Certifications"
             style="padding-top: 20px; font-size: 40px; height: 2em; ; width: 2em; border-radius: 50%; background: white; color: black;"></i>
         </a> 
