--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     data-toggle="tooltip">
     <i class="fa fa-chevron-circle-up fa-3x" aria-hidden="true" style="opacity: .4;"></i>
   </button>
-  <section id="welcome-section">
+  <section id="welcome-section"> 
     <!--Navbar-->
     <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown_hover-->
     <nav class="dropdown text-left" style="margin-top: 5px; margin-left: 5px; position: fixed;">
@@ -31,7 +31,7 @@
         <a href="#personal-projects" style="text-decoration: none;">Personal&nbsp;Projects</a>
         <a href="#projects" style="text-decoration: none;">Web&nbsp;Dev</a>
         <a href="#autocad" style="text-decoration: none;">Other&nbsp;Work</a>
-        <a href="#welcome-section" style="text-decoration: none;">Contact Info</a>
+        <a href="#contact-section" style="text-decoration: none;">Contact Info</a>
       </nav>
     </nav>
     <!--/. end Navbar-->
@@ -815,7 +815,7 @@
  
         <!-- contact info buttons -->
   
-      <div>
+      <div section id="contact-section">
         <br /><br />
         <h3>Let's work together, check out my contact info buttons below!</h3>
       </div>
