--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
  
         <!-- contact info buttons -->
   
-      <div section id="contact-section">
+      <div id="contact-section">
         <br /><br />
         <h3>Let's work together, check out my contact info buttons below!</h3>
       </div>
