--- a/index.html
+++ b/index.html
@@ -815,9 +815,9 @@
  
         <!-- contact info buttons -->
   
-      <div id="contact-section">
+      <div>
         <br /><br />
-        <h3>Let's work together, check out my contact info buttons below!</h3>
+        <h3 id="contact-section">Let's work together, check out my contact info buttons below!</h3>
       </div>
       <br /><br />
       <div id="contact-buttons" p align="center"> 
