Update index - copy.html

--- a/index - copy.html
+++ b/index - copy.html
@@ -18,7 +18,7 @@
     data-toggle="tooltip">
     <i class="fa fa-chevron-circle-up fa-3x" aria-hidden="true" style="opacity: .4;"></i>
   </button>
-  <section id="welcome-section">
+  <section id="welcome-section"> 
     <!--Navbar-->
     <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown_hover-->
     <nav class="dropdown text-left" style="margin-top: 5px; margin-left: 5px; position: fixed;">
@@ -26,12 +26,12 @@
         <i class="fa fa-caret-square-o-down fa-3x opacity-6" aria-hidden="true" data-toggle="tooltip"></i>
       </button>
       <nav class="dropdown-content" style="font-family: Verdana, Geneva, Tahoma, sans-serif; border-radius: 5px;">
-        <!--<a href="#welcome-section" style="text-decoration: none;">Contact Info</a>-->
         <a href="#about" style="text-decoration: none;">About&nbsp;Me</a>
         <a href="#certifications" style="text-decoration: none;">My&nbsp;Certifications</a>
         <a href="#personal-projects" style="text-decoration: none;">Personal&nbsp;Projects</a>
         <a href="#projects" style="text-decoration: none;">Web&nbsp;Dev</a>
         <a href="#autocad" style="text-decoration: none;">Other&nbsp;Work</a>
+        <a href="#contact-section" style="text-decoration: none;">Contact Info</a>
       </nav>
     </nav>
     <!--/. end Navbar-->
@@ -817,7 +817,7 @@
   
       <div>
         <br /><br />
-        <h3>Let's work together, check out my contact info buttons below!</h3>
+        <h3 id="contact-section">Let's work together, check out my contact info buttons below!</h3>
       </div>
       <br /><br />
       <div id="contact-buttons" p align="center"> 
