--- a/index.html
+++ b/index.html
@@ -612,11 +612,24 @@
   </section>
   <br /><br /><br />
   <!--End of web Development work --------------------------------------------------------------------------->
-  <!--Start of Archibus | CAD | Other work ---------------------------------------------------------------------------->
+  <!--Start of QA | Archibus | CAD | Other work ---------------------------------------------------------------------------->
   <section class="wrapper">
-    <h1 id="autocad" class="myGalleries">Archibus | CAD | Other Gallery</h1>
+    <h1 id="autocad" class="myGalleries">QA | Archibus | CAD Gallery</h1>
     <div class="img-area">
-       <!--Archibus 3 Page Edit Form w/ Popup-->
+
+    <!--QA Positive Negative TC example-->
+      <div class="single-img cards project-cards border-aqua">
+        <img alt="Polyline example 1" class="project-image img-thumbnail single-img" src="img/PositiveNegativeTC.PNG"
+          style="height:150px;">
+        <a href="img/PositiveNegativeTC.PNG" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">Positive / Negative TC example</p>
+      </div>
+      
+      <!--Archibus 3 Page Edit Form w/ Popup-->
       <div class="single-img cards project-cards border-aqua">
         <img alt="Polyline example 1" class="project-image img-thumbnail single-img" src="img/Archibus/3PageEditFormWithPopup.PNG"
           style="height:150px;">
@@ -880,3 +893,4 @@
   </script>
 </body>
 </html>
+
